--- a/package.json
+++ b/package.json
@@ -27,29 +27,20 @@
     "dev": "node ./utils/scripts/dev.js",
     "build": "turbo run build",
     "doc": "cd ./website && npm run build",
-    "commit": "git-cz",
+    "changeset": "changeset add",
     "postinstall": "npm run build",
     "lint": "turbo run lint",
     "prepare": "husky install",
-    "release": "lerna version --force-publish create-ima-app",
+    "release": "npm run release:prepare && npm run release:push",
+    "release:prepare": "changeset version",
+    "release:push": "git add . && git commit -m 'Publish' && npx changeset tag && git push --follow-tags",
     "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
-    "release:graduate": "npm run release -- --conventional-graduate",
-    "release:next": "npm run release -- prerelease",
-    "release:next:init": "lerna version premajor --force-publish",
-    "release:publish": "lerna publish from-package --yes --dist-tag ${DIST_TAG:-latest}",
+    "release:graduate": "changeset pre exit && npm run release",
+    "release:next:init": "changeset pre enter rc",
+    "release:publish": "changeset publish --no-git-tag",
     "stylelint": "turbo run stylelint",
     "test": "turbo run test",
     "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "git-cz"
-    }
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "eslint './**/*.{js,jsx,ts,tsx}'",
@@ -61,8 +52,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.17.12",
-    "@commitlint/cli": "^17.0.1",
-    "@commitlint/config-conventional": "^17.0.0",
+    "@changesets/cli": "2.24.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -76,7 +66,6 @@
     "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
-    "commitizen": "^4.2.4",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.24.0",
     "css-loader": "^6.7.1",
@@ -88,12 +77,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.0",
     "fs-extra": "^10.0.1",
-    "git-cz": "^4.9.0",
     "globby": "^13.1.2",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "jsdom": "^19.0.0",
-    "lerna": "^5.0.0",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
     "lint-staged": "^12.4.3",
