--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -29,8 +29,8 @@
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack --watch",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "stylelint": "stylelint './**/*.{css,less}'",
     "publish-webstore": "npm run build && npm run upload",
-    "stylelint": "stylelint './**/*.less'",
     "test": "jest",
     "upload": "chrome-webstore-upload upload --source ./dist --auto-publish",
     "preversion": "npm test",
