--- a/packages/create-ima-app/package.json
+++ b/packages/create-ima-app/package.json
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
-    "stylelint": "stylelint './**/*.less'",
+    "stylelint": "stylelint './**/*.{css,less}'",
     "test": "echo \"Error: no test specified\" && exit 0",
     "preversion": "npm test"
   },
