--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "stylelint": "stylelint './**/*.{css,less}'",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
