--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,12 @@ cache:
   - packages/error-overlay/.turbo
   - packages/helpers/.turbo
   - packages/hmr-client/.turbo
-  - packages/server/.turbo
 
 jobs:
   include:
     - name: "CI"
       script:
-      - npx turbo run build test lint stylelint
+      - npx turbo run build lint stylelint test
       - npm run benchmark
     # - name: "Audit"
     #   script: npm audit || echo \"audit found some vulnerabilities.\"
