--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,8 +25,7 @@
   },
   "scripts": {
     "build": "tsc -b",
-    "dev": "tsc -w --preserveWatchOutput",
-    "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
+    "dev": "tsc -w --preserveWatchOutput"
   },
   "dependencies": {
     "@gatsbyjs/webpack-hot-middleware": "2.25.2",
