--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,10 +39,7 @@
     "build": "rollup --config",
     "clean": "rm -rf dist",
     "dev": "rollup --config --watch",
-    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
-    "test": "npm run test:jest && npm run test:size",
-    "test:jest": "jest --no-watchman -c jest.config.js",
-    "test:size": "size-limit",
+    "test": "size-limit #@TODO This script is not called anywhere in processes",
     "preversion": "npm test"
   },
   "dependencies": {
