--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -21,9 +21,7 @@
   "main": "./dist/js/overlay.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack --watch",
-    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
-    "stylelint": "stylelint './**/*.{css,less}'"
+    "dev": "NODE_ENV=development webpack --watch"
   },
   "devDependencies": {
     "@ima/dev-utils": "^18.0.0-rc.3",
