--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -21,10 +21,7 @@
   "browser": "./dist/index.js",
   "scripts": {
     "build": "rollup --config",
-    "dev": "rollup --config --watch",
-    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
-    "test": "jest -c jest.config.js",
-    "preversion": "npm test"
+    "dev": "rollup --config --watch"
   },
   "dependencies": {
     "clone": "^2.1.2"
