--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -20,8 +20,7 @@
   "main": "./dist/fastRefreshClient.cjs",
   "scripts": {
     "build": "rollup --config",
-    "dev": "rollup --config --watch",
-    "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
+    "dev": "rollup --config --watch"
   },
   "publishConfig": {
     "access": "public",
