chore: fix devtools release and udpate docs

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "license": "MIT",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "workspaces": [
+    "./packages/devtools-scripts",
     "./website",
     "./packages/cli",
     "./packages/core",
     "./packages/create-ima-app",
     "./packages/dev-utils",
     "./packages/devtools",
-    "./packages/devtools-scripts",
     "./packages/error-overlay",
     "./packages/helpers",
     "./packages/hmr-client",
@@ -33,7 +33,7 @@
     "prepare": "husky install",
     "release": "npm run release:prepare && npm run release:push",
     "release:prepare": "changeset version",
-    "release:push": "git add . && git commit -m 'Publish' && npx changeset tag && git push --follow-tags",
+    "release:push": "git add . && git commit -m 'Publish' && changeset tag && git push --follow-tags",
     "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
     "release:graduate": "changeset pre exit && npm run release",
     "release:next:init": "changeset pre enter rc",
