--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -32,12 +32,7 @@
     "publish-webstore": "npm run build && npm run upload",
     "stylelint": "stylelint './**/*.less'",
     "test": "jest",
-    "upload": "chrome-webstore-upload upload --source ./dist --auto-publish",
-    "preversion": "npm test",
-    "postversion": "VERSION=\"$(npx -c 'echo \"$npm_package_version\"')\" && git add package.json package-lock.json && git commit -m 'chore(release-devtools): publish' && git tag -a -m 'devtools-v$VERSION' devtools-v$VERSION && git push --follow-tags",
-    "version:major": "npm --no-git-tag-version version major",
-    "version:minor": "npm --no-git-tag-version version minor",
-    "version:patch": "npm --no-git-tag-version version patch"
+    "upload": "chrome-webstore-upload upload --source ./dist --auto-publish"
   },
   "devDependencies": {
     "@ima/devtools-scripts": "^17.12.2",
