--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -33,13 +33,15 @@
   },
   "devDependencies": {
     "@ima/dev-utils": "^18.0.0-rc.1",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/webpack-env": "^1.16.3"
   },
   "peerDependencies": {
     "@ima/core": "^18.0.0-rc.0",
     "@ima/dev-utils": "^18.0.0-rc.0",
-    "react-dom": ">=16.13",
     "react": ">=16.13",
+    "react-dom": ">=16.13",
     "webpack": "^5.70.0"
   }
 }
