--- a/website/package.json
+++ b/website/package.json
@@ -17,9 +17,9 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-rc.1",
-    "@docusaurus/preset-classic": "2.0.0-rc.1",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-rc.1",
+    "@docusaurus/core": "^2.0.1",
+    "@docusaurus/preset-classic": "^2.0.1",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
     "akar-icons": "^1.9.18",
     "clsx": "^1.2.1",
