--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "git-cz": "^4.9.0",
     "globby": "^13.1.2",
     "husky": "^7.0.4",
-    "jest": "^26.6.3",
+    "jest": "27.0.0",
     "jsdom": "^19.0.0",
     "lerna": "^5.0.0",
     "less": "^4.1.2",
