--- a/website/package.json
+++ b/website/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "globby": "^13.1.2",
     "jsdoc-to-markdown": "^7.1.1"
   },
   "browserslist": {
