chore: remove turbo; move website scripts and deps to root

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@ out/
 .DS_Store
 .idea
 .history
-.turbo
 jsconfig.json
 ima-app
 storage
 docs/api
 .eslintcache
 .stylelintcache
+.docusaurus
+build
