--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "license": "MIT",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "workspaces": [
-    "./website",
+    "./packages/dev-utils",
+    "./packages/devtools-scripts",
     "./packages/cli",
     "./packages/core",
     "./packages/create-ima-app",
-    "./packages/dev-utils",
     "./packages/devtools",
-    "./packages/devtools-scripts",
     "./packages/error-overlay",
     "./packages/helpers",
     "./packages/hmr-client",
@@ -25,8 +24,9 @@
   "scripts": {
     "benchmark": "utils/benchmark/benchmark.sh",
     "dev": "node ./utils/scripts/dev.js",
-    "build": "turbo run build",
-    "doc": "cd ./website && npm run build",
+    "build": "npm run build --workspaces --if-present",
+    "doc:build": "node ./website/scripts/jsdoc2md.mjs && docusaurus build ./website",
+    "doc:serve": "docusaurus serve ./website",
     "changeset": "changeset add",
     "postinstall": "npm run build",
     "lint": "eslint --cache './**/*.{js,jsx,ts,tsx,mjs}'",
@@ -40,10 +40,11 @@
     "release:publish": "changeset publish --no-git-tag",
     "stylelint": "stylelint --cache './**/*.{css,less}'",
     "test": "jest --onlyChanged",
+    "test:size": "npm run test:size --workspaces --if-present",
     "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": "eslint",
+    "**/*.{js,jsx,ts,tsx,mjs}": "eslint",
     "**/*.{css,less}": "stylelint"
   },
   "devDependencies": {
@@ -53,6 +54,10 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.17.12",
     "@changesets/cli": "2.24.1",
+    "@docusaurus/core": "^2.0.1",
+    "@docusaurus/preset-classic": "^2.0.1",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.0.1",
+    "@mdx-js/react": "^1.6.22",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -61,11 +66,13 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "akar-icons": "^1.9.18",
     "autocannon": "^7.9.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
+    "clsx": "^1.2.1",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.24.0",
     "css-loader": "^6.7.1",
@@ -77,8 +84,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.0",
     "fs-extra": "^10.0.1",
+    "globby": "^13.1.2",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
+    "jsdoc-to-markdown": "^7.1.1",
     "jsdom": "^19.0.0",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
@@ -89,6 +98,9 @@
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.4.3",
     "prettier": "^2.6.0",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.77.1",
     "rollup-plugin-jscc": "^2.0.0",
     "style-loader": "^3.3.1",
@@ -98,7 +110,6 @@
     "stylelint-declaration-block-no-ignored-properties": "2.5.0",
     "stylelint-order": "5.0.0",
     "to-mock": "1.6.2",
-    "turbo": "^1.3.4",
     "typescript": "^4.7.2",
     "verdaccio": "^5.10.3",
     "webpack": "^5.74.0",
