--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,6 @@
   "exclude": [
     "**/node_modules/**",
     "**/__snapshots__/**",
-    "**/dist/**",
-    "**/.turbo/**"
+    "**/dist/**"
   ]
 }
