--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "release:publish": "changeset publish --no-git-tag",
     "stylelint": "stylelint --cache './**/*.{css,less}'",
     "test": "jest --onlyChanged",
+    "test:ci": "jest --colors",
     "test:size": "npm run test:size --workspaces --if-present",
     "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
   },
