--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "workspaces": [
+    "./website",
     "./packages/dev-utils",
     "./packages/devtools-scripts",
     "./packages/cli",
@@ -25,8 +26,7 @@
     "benchmark": "utils/benchmark/benchmark.sh",
     "dev": "node ./utils/scripts/dev.js",
     "build": "npm run build --workspaces --if-present",
-    "doc": "node ./website/scripts/jsdoc2md.mjs && docusaurus build ./website",
-    "doc:serve": "docusaurus serve ./website",
+    "doc": "npm run build:doc --workspace website",
     "changeset": "changeset add",
     "postinstall": "npm run build",
     "lint": "eslint --cache './**/*.{js,jsx,ts,tsx,mjs}'",
@@ -55,25 +55,20 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.17.12",
     "@changesets/cli": "2.24.1",
-    "@docusaurus/core": "^2.0.1",
-    "@docusaurus/preset-classic": "^2.0.1",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.0.1",
-    "@mdx-js/react": "^1.6.22",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.2",
+    "@size-limit/preset-big-lib": "^7.0.8",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "akar-icons": "^1.9.18",
     "autocannon": "^7.9.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
-    "clsx": "^1.2.1",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.24.0",
     "css-loader": "^6.7.1",
@@ -85,10 +80,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.0",
     "fs-extra": "^10.0.1",
-    "globby": "^13.1.2",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
-    "jsdoc-to-markdown": "^7.1.1",
     "jsdom": "^19.0.0",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
@@ -99,11 +92,9 @@
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.4.3",
     "prettier": "^2.6.0",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "rollup": "^2.77.1",
     "rollup-plugin-jscc": "^2.0.0",
+    "size-limit": "^7.0.8",
     "style-loader": "^3.3.1",
     "stylelint": "^14.8.5",
     "stylelint-config-css-modules": "^4.1.0",
