--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,10 +31,8 @@
     "express": "^4.17.1"
   },
   "dependencies": {
+    "@esmj/emitter": "^0.0.3",
     "ejs": "^3.1.6",
-    "error-to-json": "1.1.0",
-    "highlight.js": "9.16.2",
-    "stack-trace": "0.0.10",
     "winston": "3.2.1"
   },
   "peerDependencies": {
