--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -34,7 +34,7 @@
     "@ima/error-overlay": "^18.0.0-rc.4",
     "@ima/hmr-client": "^18.0.0-rc.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@swc/core": "^1.2.196",
+    "@swc/core": "1.2.230",
     "ajv": "8.11.0",
     "better-opn": "3.0.2",
     "bundle-stats-webpack-plugin": "^3.3.8",
@@ -42,7 +42,7 @@
     "cli-progress": "^3.11.1",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "core-js": "3.24.0",
+    "core-js": "^3.24.1",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "ejs": "^3.1.7",
@@ -59,7 +59,7 @@
     "postcss": "^8.4.14",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "^7.0.0",
-    "postcss-preset-env": "^7.6.0",
+    "postcss-preset-env": "^7.8.0",
     "pretty-bytes": "5.6.0",
     "pretty-ms": "7.0.1",
     "react-refresh": "^0.14.0",
@@ -75,10 +75,10 @@
     "@types/cli-progress": "^3.11.0",
     "@types/ejs": "^3.1.0",
     "@types/express": "4.17.13",
-    "@types/node": "^18.6.1",
+    "@types/node": "^18.7.6",
     "@types/nodemon": "^1.19.2",
-    "@types/webpack-bundle-analyzer": "4.4.1",
-    "@types/webpack-env": "^1.17.0",
+    "@types/webpack-bundle-analyzer": "^4.4.2",
+    "@types/webpack-env": "^1.18.0",
     "@types/webpack-hot-middleware": "2.25.6",
     "@types/yargs": "^17.0.10"
   },
