Fixed tsconfig and package-lock.json

--- a/packages/error-overlay/tsconfig.json
+++ b/packages/error-overlay/tsconfig.json
@@ -12,7 +12,10 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "typeRoots": [
+      "./node_modules/@types",
+    ],
   },
   "include": [
     "./typings/**/*",
