--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -6,7 +6,10 @@
     ],
     "resolveJsonModule": true,
     "outDir": "./dist",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "typeRoots": [
+      "./node_modules/@types",
+    ],
   },
   "include": [
     "./typings/**/*",
