--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2022"],
     "module": "commonjs",
     "typeRoots": [
       "typings",
-      "node_modules/@types"
+      "node_modules/@types",
     ],
-    "outDir": "dist",
     "declaration": true,
     "allowJs": true,
     "esModuleInterop": true,
