--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,6 +39,9 @@
     "build": "rollup --config",
     "clean": "rm -rf dist",
     "dev": "rollup --config --watch",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "test": "npm run test:jest && npm run test:size",
+    "test:jest": "jest -c jest.config.js",
     "test:size": "size-limit",
     "preversion": "npm test"
   },
