--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -28,7 +28,10 @@
   "scripts": {
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack --watch",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "publish-webstore": "npm run build && npm run upload",
+    "stylelint": "stylelint './**/*.less'",
+    "test": "jest",
     "upload": "chrome-webstore-upload upload --source ./dist --auto-publish"
   },
   "devDependencies": {
