--- a/packages/create-ima-app/package.json
+++ b/packages/create-ima-app/package.json
@@ -36,6 +36,10 @@
   "bin": {
     "create-ima-app": "./bin/create-ima-app.js"
   },
+  "scripts": {
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "stylelint": "stylelint './**/*.less'"
+  },
   "dependencies": {
     "chalk": "^5.0.1",
     "fs-extra": "^10.1.0"
