--- a/packages/devtools-scripts/package.json
+++ b/packages/devtools-scripts/package.json
@@ -31,7 +31,8 @@
   "browser": "./dist/index.js",
   "scripts": {
     "build": "rollup --config",
-    "dev": "rollup --config --watch"
+    "dev": "rollup --config --watch",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "to-aop": "^0.5.4"
