--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -21,7 +21,9 @@
   "main": "./dist/js/overlay.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack --watch"
+    "dev": "NODE_ENV=development webpack --watch",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "stylelint": "stylelint './**/*.less'"
   },
   "devDependencies": {
     "@ima/dev-utils": "^18.0.0-rc.4",
