--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -20,7 +20,8 @@
   "main": "./dist/fastRefreshClient.cjs",
   "scripts": {
     "build": "rollup --config",
-    "dev": "rollup --config --watch"
+    "dev": "rollup --config --watch",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
   },
   "publishConfig": {
     "access": "public",
