--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,6 +19,10 @@
   "license": "MIT",
   "author": "Seznam.cz, a.s.",
   "main": "index.js",
+  "scripts": {
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "test": "jest"
+  },
   "dependencies": {
     "ejs": "^3.1.6",
     "error-to-json": "^2.0.0",
