--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,7 @@
     "@ima/dev-utils": "^18.0.0-rc.4",
     "@ima/error-overlay": "^18.0.0-rc.4",
     "@ima/hmr-client": "^18.0.0-rc.4",
+    "@messageformat/core": "^3.0.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@swc/core": "1.2.230",
     "ajv": "8.11.0",
@@ -52,7 +53,6 @@
     "kill-port": "^1.6.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
-    "messageformat": "2.3.0",
     "mini-css-extract-plugin": "^2.6.1",
     "nodemon": "^2.0.16",
     "open-editor": "3.0.0",
