--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "release:publish": "changeset publish --no-git-tag",
     "stylelint": "stylelint --cache './**/*.{css,less}'",
     "test": "jest --changedSince `test -f '.changeset/pre.json' && echo 'next' || echo 'master'`",
-    "test:ci": "jest --colors",
+    "test:all": "jest --colors",
     "test:size": "npm run test:size --workspaces --if-present",
     "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
   },
@@ -92,8 +92,8 @@
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.4.3",
     "prettier": "^2.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.77.1",
     "rollup-plugin-jscc": "^2.0.0",
     "size-limit": "^8.0.1",
