--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -9,6 +9,7 @@
     "baseUrl": ".",
     "typeRoots": [
       "./node_modules/@types",
+      "../../node_modules/@types",
     ],
   },
   "include": [
