--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx,mjs}'",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
