--- a/packages/react-page-renderer/tsconfig.json
+++ b/packages/react-page-renderer/tsconfig.json
@@ -15,7 +15,11 @@
       "*": [
         "./typings/*"
       ]
-    }
+    },
+    "typeRoots": [
+      "./node_modules/@types",
+      "../../node_modules/@types",
+    ],
   },
   "include": [
     "./typings/**/*",
