chore: move lint cache location to node_modules

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "doc": "npm run build:doc --workspace website",
     "changeset": "changeset add",
     "postinstall": "npm run build",
-    "lint": "eslint --cache './**/*.{js,jsx,ts,tsx,mjs}'",
+    "lint": "eslint --cache --cache-location=node_modules/.cache/ './**/*.{js,jsx,ts,tsx,mjs}'",
     "prepare": "husky install",
     "release": "npm run release:prepare && npm run release:push",
     "release:prepare": "changeset version",
@@ -38,7 +38,7 @@
     "release:graduate": "changeset pre exit && npm run release",
     "release:next:init": "changeset pre enter rc",
     "release:publish": "changeset publish --no-git-tag",
-    "stylelint": "stylelint --cache './**/*.{css,less}'",
+    "stylelint": "stylelint --cache --cache-location=node_modules/.cache/ './**/*.{css,less}'",
     "test": "jest --changedSince `test -f '.changeset/pre.json' && echo 'next' || echo 'master'`",
     "test:all": "jest --colors",
     "test:size": "npm run test:size --workspaces --if-present",
