--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "dist",
   },
   "include": [
-    "src",
+    "src", "../dev-utils/src/time.ts", "../dev-utils/src/logger.ts",
   ]
 }
