--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "autocannon": "^7.9.0",
-    "babel-jest": "^28.1.3",
+    "babel-jest": "^29.0.1",
     "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
@@ -81,8 +81,8 @@
     "eslint-plugin-react": "^7.30.0",
     "fs-extra": "^10.0.1",
     "husky": "^7.0.4",
-    "jest": "28.1.3",
-    "jsdom": "^19.0.0",
+    "jest": "^29.0.1",
+    "jsdom": "^20.0.0",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
     "lint-staged": "^12.4.3",
