--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "fs-extra": "^10.0.1",
     "husky": "^7.0.4",
     "jest": "^29.0.1",
+    "jest-environment-jsdom": "^29.0.1",
     "jsdom": "^20.0.0",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
