--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -56,8 +56,7 @@
     "react-json-view": "1.21.3",
     "react-redux": "7.2.8",
     "react-tabs": "4.2.0",
-    "redux": "4.1.2",
-    "jest-environment-jsdom": "28.1.3"
+    "redux": "4.1.2"
   },
   "publishConfig": {
     "access": "public",
