--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@size-limit/preset-big-lib": "^8.0.1",
+    "@types/jest": "^28.1.8",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "autocannon": "^7.9.0",
@@ -83,6 +84,8 @@
     "husky": "^7.0.4",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.0.1",
+    "jest-watch-select-projects": "^2.0.0",
+    "jest-watch-typeahead": "^2.1.1",
     "jsdom": "^20.0.0",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
