--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "@size-limit/preset-big-lib": "^8.0.1",
     "@types/jest": "^28.1.8",
+    "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "autocannon": "^7.9.0",
