--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,9 +35,9 @@
   "main": "./dist/server/index.js",
   "browser": "./dist/client/index.js",
   "scripts": {
-    "dev": "ima-plugin dev",
-    "build": "ima-plugin build",
-    "link": "ima-plugin link",
+    "dev": "node ../plugin-cli/dist/bin/ima-plugin.js dev",
+    "build": "node ../plugin-cli/dist/bin/ima-plugin.js build",
+    "link": "node ../plugin-cli/dist/bin/ima-plugin.js link",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "test": "npm run test:jest && npm run test:size",
     "test:jest": "jest -c jest.config.js",
