Fixed build and size-limit

--- a/packages/devtools-scripts/package.json
+++ b/packages/devtools-scripts/package.json
@@ -26,9 +26,8 @@
       "email": "jan.simecek@firma.seznam.cz"
     }
   ],
-  "main": "./dist/index.cjs",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
-  "browser": "./dist/index.js",
   "scripts": {
     "build": "rollup --config",
     "dev": "rollup --config --watch",
