--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -64,12 +64,7 @@
   "size-limit": [
     {
       "limit": "31 KB",
-      "path": "./dist/client.mjs",
-      "running": false
-    },
-    {
-      "limit": "31 KB",
-      "path": "./dist/server.mjs",
+      "path": "./dist/client/index.js",
       "running": false
     }
   ]
