--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -16,9 +16,8 @@
   },
   "license": "MIT",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-  "main": "./dist/index.cjs",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
-  "browser": "./dist/index.js",
   "scripts": {
     "build": "rollup --config",
     "dev": "rollup --config --watch",
