--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -17,7 +17,8 @@
   },
   "license": "MIT",
   "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
-  "main": "./dist/fastRefreshClient.cjs",
+  "main": "./dist/fastRefreshClient.js",
+  "module": "./dist/fastRefreshClient.mjs",
   "scripts": {
     "build": "rollup --config",
     "dev": "rollup --config --watch",
