--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -59,6 +59,7 @@
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.8.0",
+    "preprocess": "^3.2.0",
     "pretty-bytes": "5.6.0",
     "pretty-ms": "7.0.1",
     "react-refresh": "^0.14.0",
