--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -42,8 +42,8 @@
   "peerDependencies": {
     "@ima/core": "^18.0.0-rc.0",
     "@ima/dev-utils": "^18.0.0-rc.0",
-    "react": ">=18",
-    "react-dom": ">=18",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "webpack": "^5.70.0"
   }
 }
