--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,6 +35,7 @@
     "@ima/hmr-client": "^18.0.0-rc.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@swc/core": "^1.3.0",
+    "ajv": "^8.11.0",
     "better-opn": "3.0.2",
     "chalk": "4.1.2",
     "cli-progress": "^3.11.1",
