--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,7 @@
     "directory": "packages/core"
   },
   "type": "module",
+  "sideEffects": false,
   "license": "MIT",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "contributors": [
@@ -60,12 +61,5 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
-  },
-  "size-limit": [
-    {
-      "limit": "31 KB",
-      "path": "./dist/client/index.js",
-      "running": false
-    }
-  ]
+  }
 }
