New IMA server (#251)
BREAKING CHANGE: 🧨 remove allowSPA flag from route

* feat: 🎸 add new ima/server to template

BREAKING CHANGE: 🧨 IMA server returns factory function

* style: 💄 remove typo dot

* chore: 🤖 update dev dependencies

* style: 💄 fixed stylelinter errors

* feat: 🎸 rewrite dev error page to ejs

* feat: 🎸 implement new serverApp

* feat: implement new IMA server

* clear docs cache

* remove examples feed,hello,todos

* remove duplicity config

* refactor: fix problems from CR

* Removed  data from clear and error event emitter events in favor of automatic type detection in error-overlay (#249)

* chore: add lock file

* test: fix tests

* style: fix code style

* feat: add new template for new ima server

* fix: webpack utils use new environment factory

* chore: change workspaces order

* fix: change parent stream

* feat: allow optional require for vendors file

* fix: optional uncache require

* fix: running production build

* fix: add missing dependencies

* chore: add option to emitter

* ci: added lock files

* chore: remove fix property from lint command

Co-authored-by: Jan Šimeček <simecekjann@gmail.com>

--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "workspaces": [
     "./website",
     "./packages/dev-utils",
-    "./packages/devtools-scripts",
     "./packages/plugin-cli",
-    "./packages/cli",
+    "./packages/helpers",
     "./packages/core",
+    "./packages/server",
+    "./packages/devtools-scripts",
+    "./packages/cli",
     "./packages/create-ima-app",
     "./packages/devtools",
     "./packages/error-overlay",
-    "./packages/helpers",
-    "./packages/hmr-client",
-    "./packages/server"
+    "./packages/hmr-client"
   ],
   "scripts": {
     "benchmark": "utils/benchmark/benchmark.sh",
