--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,9 +24,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@esmj/emitter": "^0.0.4",
     "ejs": "^3.1.6",
-    "error-to-json": "^2.0.0",
-    "winston": "^3.6.0"
+    "winston": "3.2.1"
   },
   "devDependencies": {
     "@ima/dev-utils": "^18.0.0-rc.4",
