--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@ima/dev-utils": "^18.0.0-rc.1",
+    "@esmj/emitter": "^0.0.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/webpack-env": "^1.16.3"
