--- a/packages/react-page-renderer/tsconfig.json
+++ b/packages/react-page-renderer/tsconfig.json
@@ -15,13 +15,10 @@
         "./typings/*"
       ]
     },
-    "typeRoots": [
-      "./node_modules/@types",
-      "../../node_modules/@types",
-    ],
   },
   "include": [
-    "./typings/**/*",
+    "../../typings/**/*/*",
+    "./types/**/*",
     "./src/**/*"
   ]
 }
