--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "typeRoots": [
-      "types",
-      "node_modules/@types"
+      "./types",
+      "./node_modules/@types"
     ]
   }
 }
