--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,28 +1,25 @@
 {
-"extends": "../../tsconfig.json",
-"compilerOptions": {
-    "lib": [
-    "DOM",
-    "ES2020"
-    ],
-    "outDir": "./dist",
-    "baseUrl": ".",
-    "declaration": false,
-    "paths": {
-    "@/*": [
-        "./src/*"
-    ],
-    "*": [
-        "./typings/*"
-    ]
+    "extends": "../../tsconfig.json",
+    "compilerOptions": {
+        "target": "ES2022",
+        "lib": [
+        "DOM",
+        "ES2022"
+        ],
+        "outDir": "./dist",
+        "baseUrl": ".",
+        "paths": {
+        "@/*": [
+            "./src/*"
+        ],
+        "*": [
+            "./typings/*"
+        ]
+        },
     },
-    "typeRoots": [
-    "./node_modules/@types",
-    "../../node_modules/@types",
-    ],
-},
-"include": [
-    "./typings/**/*",
-    "./src/**/*"
-]
+    "include": [
+        "../../typings/**/*/*",
+        "./types/**/*",
+        "./src/**/*"
+    ]
 }
