--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@ima/plugin-cli": "^18.0.0-rc.1",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "jscodeshift": "^0.13.1"
   },
   "publishConfig": {
