--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -54,7 +54,9 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
     "@types/multer": "^1.4.7",
-    "jscodeshift": "^0.13.1"
+    "@types/node-fetch": "^2.6.2",
+    "jscodeshift": "^0.13.1",
+    "undici": "^5.10.0"
   },
   "publishConfig": {
     "access": "public",
