--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -55,8 +55,7 @@
     "@types/jest": "^29.0.3",
     "@types/multer": "^1.4.7",
     "@types/node-fetch": "^2.6.2",
-    "jscodeshift": "^0.13.1",
-    "undici": "^5.10.0"
+    "jscodeshift": "^0.13.1"
   },
   "publishConfig": {
     "access": "public",
