--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/react-page-renderer",
-  "version": "18.0.0-rc.9",
+  "version": "18.0.0-rc.10",
   "description": "IMA.js React page renderer.",
   "keywords": [
     "IMA.js",
@@ -48,8 +48,8 @@
   "peerDependencies": {
     "@ima/core": "^18.0.0-ts.15",
     "@ima/dev-utils": "^18.0.0-rc.0",
-    "react": ">17.0.2",
-    "react-dom": ">17.0.2",
+    "react": ">=17.0.2",
+    "react-dom": ">=17.0.2",
     "webpack": "^5.70.0"
   }
 }
