--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.mjs",
+  "module": "./dist/esm/index.js",
   "scripts": {
     "test": "jest",
     "lint": "eslint './**/*.{js,jsx,ts,tsx,mjs}'",
