--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -16,8 +16,9 @@
   },
   "license": "MIT",
   "author": "Matěj Marčišovský <matej.marcisovsky@firma.seznam.cz>",
-  "main": "./dist/server/index.js",
-  "browser": "./dist/client/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/server/index.js",
+  "browser": "./dist/esm/client/index.js",
   "scripts": {
     "dev": "node ../plugin-cli/dist/bin/ima-plugin.js dev",
     "build": "node ../plugin-cli/dist/bin/ima-plugin.js build",
