--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,6 +52,7 @@
     "kill-port": "^1.6.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "less-plugin-glob": "^3.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "nodemon": "^2.0.16",
     "open-editor": "3.0.0",
