--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@ima/core": "rc",
-    "@ima/react-hooks": "rc",
+    "@ima/react-hooks": "2.0.0-ts.3",
     "@ima/react-page-renderer": "18.0.0-rc.9",
     "@ima/server": "rc",
     "body-parser": "^1.19.2",
