--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
       - npm run stylelint
       - npm run test:all
       - npm run test:size
-      - npm run doc
+      # - npm run doc
       - npm run benchmark
       # - npm audit || echo \"audit found some vulnerabilities.\"
     - if: branch =~ /^(master|next)$/
