--- a/packages/react-page-renderer/package.json
+++ b/packages/react-page-renderer/package.json
@@ -49,7 +49,7 @@
     "to-mock": "^1.6.2"
   },
   "peerDependencies": {
-    "@ima/core": "^18.0.0-ts.15",
+    "@ima/core": "^18.0.0-rc.16",
     "@ima/dev-utils": "^18.0.0-rc.0",
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2",
