--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@ima/core": "rc",
-    "@ima/react-page-renderer": "18.0.0-rc.9",
+    "@ima/react-page-renderer": "latest",
     "@ima/server": "rc",
     "body-parser": "^1.19.2",
     "compression": "1.7.4",
