--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,7 @@
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "express-static-gzip": "^2.1.7",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
     "globby": "11.1.0",
     "kill-port": "^1.6.1",
     "less": "^4.1.3",
