--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -66,7 +66,6 @@
     "pretty-bytes": "5.6.0",
     "pretty-ms": "7.0.1",
     "react-refresh": "^0.14.0",
-    "regenerator-runtime": "0.13.9",
     "schema-utils": "4.0.0",
     "swc-loader": "^0.2.1",
     "webpack": "^5.74.0",
@@ -76,7 +75,7 @@
   "devDependencies": {
     "@types/cli-progress": "^3.11.0",
     "@types/ejs": "^3.1.0",
-    "@types/express": "4.17.13",
+    "@types/express": "^4.17.14",
     "@types/nodemon": "^1.19.2",
     "@types/webpack-env": "^1.18.0",
     "@types/webpack-hot-middleware": "2.25.6",
