--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,9 +24,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@esmj/emitter": "^0.0.6",
+    "@esmj/emitter": "^0.0.7",
     "ejs": "^3.1.6",
-    "winston": "3.2.1"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@ima/dev-utils": "^18.0.0-rc.4",
